dailysale,postfalg,image queue & send to erp, m2
